<resources>
    <string name="app_name">一村一警</string>

    <string name="news">警务资讯</string>
    <string name="navigation">一村一警</string>
    <string name="guide">办事指南</string>
    <string name="profile">个人中心</string>

    <string name="news_detail">资讯详情</string>

    <string name="loading">loading</string>
    <string name="back">返回</string>

    <string name="police_info">查询民警信息</string>
    <string name="office_map">警务室地图</string>
    <string name="office_info">警务室列表</string>

    <string name="notice">通知通报</string>
    <string name="processing">意见处理</string>
    <string name="record">填写工作记录</string>
    <string name="record_history">我的工作记录</string>
    <string name="sign">签到</string>
    <string name="change_pwd">修改密码</string>

    <string name="id">账号</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="goto_login">去登录</string>
    <string name="register">注册</string>
    <string name="title">标题</string>
    <string name="type">类型</string>
    <string name="info">详细内容</string>
    <string name="shiming">实名提交</string>
    <string name="anonymous">匿名提交</string>
    <string name="minyi">民意测评</string>
    <string name="feedback">意见反馈</string>
    <string name="opinion">我的意见</string>
    <string name="area">地区选择</string>
    <string name="work_type">工作类型</string>
    <string name="nouser">暂无民警信息</string>
    <string name="gensui">当前位置</string>
    <string name="df">确认答复</string>
    <string name="dfinfo">答复内容</string>

    <string name="zhanghao">账号：</string>
    <string name="mima">密码：</string>
    <string name="zaicishuru">再次输入：</string>
    <string name="name">姓名：</string>
    <string name="sex">性别：</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="tel">联系电话：</string>
    <string name="addr">乡镇、村：</string>
    <string name="old_pwd">原密码：</string>
    <string name="new_pwd">新密码：</string>
    <string name="ok">确定</string>
    <string name="click">点击选择</string>
    <string name="success">注册成功</string>

    <string name="hit_zhanghao">6至20个字母或数字</string>
    <string name="hit_mima">6至20个字母、数字或下划线</string>
    <string name="hit_zaici">再次输入要设置的密码</string>
    <string name="hit_xuanze">点击选择</string>
    <string name="hit_fankui">反馈类型：点击选择</string>

    <string name="all_addr">所有乡镇</string>
    <string name="query_police">民警查询</string>
    <string name="police_sign">民警签到</string>

    <string name="time">时间：</string>
    <string name="work">工作内容：</string>
    <string name="sign_now">开始签到</string>

    <string name="commit">提交</string>

    <string name="un_process">未处理</string>
    <string name="process">已处理</string>

    <string name="to_login">请登录后再继续操作</string>
    <string name="nimingchenggong">已成功匿名提交了您的意见</string>
    <string name="chuli">答复成功</string>
    <string name="fanhuip">返回个人中心</string>
    <string name="fanhuiyj">返回意见列表</string>
    <string name="work_sucess">提交成功</string>
    <string name="logout">退出登录</string>
    <string name="pic">查看图片</string>
    <string name="p1">拍照</string>
    <string name="p2">相册</string>

    <string name="minyi1">1、您是否认识自己辖区的“一村一警”包村民警？</string>
    <string name="minyi2">2、您对自己居住的环境是否感到安全</string>
    <string name="minyi3">1、您对您所属的「一村一警察」包村民警的工作是否满意</string>
    <string name="minyi1_1">A.认识</string>
    <string name="minyi1_2">B.不认识，但见过或听说过</string>
    <string name="minyi1_3">C.不认识，也没见过或听说过</string>
    <string name="minyi2_1">A.安全</string>
    <string name="minyi2_2">B.基本安全</string>
    <string name="minyi2_3">C.不安全</string>
    <string name="minyi3_1">A.满意</string>
    <string name="minyi3_2">B.基本满意</string>
    <string name="minyi3_3">C.不满意</string>

    <string name="del">删除</string>
    <string name="loaderror">下载失败</string>
    <string name="dialog_error_title">下载提醒</string>
    <string name="dialog_downfailed_msg">下载失败是从重新下载</string>
    <string name="dialog_downfailed_btnnext">重试</string>
    <string name="dialog_update_title">更新提醒</string>
    <string name="dialog_update_msg">发现新版本是否进行下载更新</string>
    <string name="dialog_update_btnupdate">确定</string>
    <string name="dialog_downloading_msg">下载ing</string>
    <string name="dialog_cancel">取消</string>


    <string name="reset">已暂停推送, 点此重新启用</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="log">日志</string>
    <string name="settings">设置</string>
    <string name="set_alias">设置别名</string>
    <string name="unset_alias">撤销别名</string>
    <string name="subscribe_topic">订阅标签</string>
    <string name="unsubscribe_topic">撤销标签</string>
    <string name="set_env">设置环境</string>
    <string name="set_accept_time">设置时间</string>
    <string name="pause_push">暂停推送</string>
    <string name="current_env">当前环境：%s</string>
    <string name="official_env">线上环境</string>
    <string name="sandbox_env">沙箱环境</string>
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_message"> Receive a message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>
</resources>
