<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/default_padding">

        <com.psb.ui.widget.RoundImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_more" />

    </RelativeLayout>

    <com.psb.ui.widget.ItemHorizontal
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        app:ItemHorizontal_text="@string/notice" />

    <com.psb.ui.widget.ItemHorizontal
        android:id="@+id/processing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        app:ItemHorizontal_text="@string/processing" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_marginLeft="50dp"
        android:background="@color/black" />

    <com.psb.ui.widget.ItemHorizontal
        android:id="@+id/record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ItemHorizontal_text="@string/record" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:layout_marginLeft="50dp"
        android:background="@color/black" />

    <com.psb.ui.widget.ItemHorizontal
        android:id="@+id/record_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ItemHorizontal_text="@string/record_history" />


    <com.psb.ui.widget.ItemHorizontal
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        app:ItemHorizontal_text="@string/sign" />

    <com.psb.ui.widget.ItemHorizontal
        android:id="@+id/pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        app:ItemHorizontal_text="@string/change_pwd" />

</LinearLayout>
