<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:drawableLeft="@drawable/yuanbao_img"
        android:hint="@string/change_pwd"
        android:padding="@dimen/default_padding"
        android:textSize="@dimen/newstitle_detail_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/yuanbao_img"
        android:hint="@string/change_pwd"
        android:inputType="textPassword"
        android:padding="@dimen/default_padding"
        android:textSize="@dimen/newstitle_detail_size" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:background="@color/default_blue_color"
        android:padding="@dimen/default_padding"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_office_info_divider"
        android:padding="@dimen/default_padding"
        android:text="@string/register"
        android:textColor="@color/news_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_office_info_divider"
        android:padding="@dimen/default_padding"
        android:text="@string/anonymous"
        android:textColor="@color/news_content" />

</LinearLayout>
