<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/item_office_info_divider"
            android:orientation="vertical">

            <com.psb.ui.widget.TopNavigationBar
                android:id="@+id/topbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/feedback" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:background="@color/white"
                android:hint="@string/title"
                android:padding="@dimen/default_padding"
                android:textColor="@color/news_title"
                android:textColorHint="@color/news_title"
                android:textSize="@dimen/newstitle_title_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_marginRight="@dimen/default_padding" />

            <EditText
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="top|left"
                android:hint="@string/info"
                android:lines="5"
                android:minHeight="@dimen/feedback_info_height"
                android:padding="@dimen/default_padding"
                android:textColorHint="@color/news_title" />
        </LinearLayout>

        <com.psb.ui.widget.ImageGridView
            android:id="@+id/imgs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="@dimen/default_padding"
            android:numColumns="3"
            android:verticalSpacing="@dimen/default_padding" />

        <LinearLayout
            android:id="@+id/def"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <Button
                android:id="@+id/shiming"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_item_img_height"
                android:layout_weight="1"
                android:background="@color/shiming"
                android:text="@string/shiming"
                android:textColor="@color/white" />

            <View
                android:layout_width="@dimen/default_padding"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/niming"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_item_img_height"
                android:layout_weight="1"
                android:background="@color/niming"
                android:text="@string/anonymous"
                android:textColor="@color/white" />
        </LinearLayout>


        <Button
            android:id="@+id/login_niming"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/horizontal_item_img_height"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_padding"
            android:background="@color/niming"
            android:paddingLeft="@dimen/top_bar_btn_minWidth"
            android:paddingRight="@dimen/top_bar_btn_minWidth"
            android:text="@string/anonymous"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>